...
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@id/layout_publisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        android:layout_marginTop="30dp">
        <TextView
...
            android:layout_height="wrap_content"
            android:text="@string/publisher_box"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"/>
        <Spinner
            android:id="@+id/publisher_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
...
            android:text="@string/from_picker"
            android:layout_marginLeft="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"/>

        <Button
            android:id="@+id/date_picker_from"
            style="?android:spinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/from_view"
...

        <TextView
            android:id="@+id/to_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_picker"
            android:layout_toStartOf="@id/date_picker_to"
            android:layout_centerVertical="true"
            />

        <Button
            android:id="@+id/date_picker_to"
            style="?android:spinnerStyle"
...
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingRight="30dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/filter_search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_search_button"
        app:layout_constraintBottom_toTopOf="@+id/article_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
...
