<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Adapted from https://www.geeksforgeeks.org/how-to-create-an-expandable-cardview-in-android/-->
    <!-- Base CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/base_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/text_cardview_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardUseCompatPadding="true"
        app:cardElevation="4dp"
        app:cardCornerRadius="3dp"
        >

        <!-- This is a ConstraintLayout for the entire CardView including the expandable portion -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/base_cardview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.511"
            tools:layout_editor_absoluteX="-55dp">

            <!-- This is a ConstraintLayout for the fixed portion of the CardView. The elements that
            lie within the fixed portion of the CardView can be constrained to this layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fixed_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="0.0">

                <ImageView
                    android:id="@+id/image_article_thumbnail"
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/text_publisher"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Publisher"
                    android:layout_marginLeft="@dimen/text_cardview_padding"
                    android:layout_marginRight="@dimen/text_cardview_padding"
                    android:ellipsize="end"
                    app:layout_constraintStart_toEndOf="@+id/image_article_thumbnail"
                    app:layout_constraintEnd_toStartOf="@+id/text_date_published"
                    app:layout_constraintHorizontal_bias=".5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_date_published"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:layout_marginRight="@dimen/text_cardview_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/text_article_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Article Title"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:layout_marginLeft="@dimen/text_cardview_padding"
                    android:layout_marginRight="@dimen/text_cardview_padding"
                    app:layout_constraintStart_toEndOf="@+id/image_article_thumbnail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_publisher"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="1.0"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- The following is the expandable portion whose visibility is initially set to 'gone'-->
            <LinearLayout
                android:id="@+id/layout_hidden_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fixed_layout">

                <TextView
                    android:id="@+id/text_article_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="14dp"
                    android:text="Article Synopsis"
                    android:textColor="@color/black"
                    android:textSize="14dp" />
                <Button
                    android:id="@+id/button_redirect_article"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/redirect_article_button_caption"
                    android:layout_gravity="center"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/text_article_synopsis"
                    app:layout_constraintVertical_bias="0"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>