<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_articles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ArticlesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</androidx.core.widget.NestedScrollView>